# lambdabot-jira-plugins

./: lambdabot-jira-plugins.cabal
src/Lambdabot/Plugin/: Jira.hs
