name:                lambdabot-jira-plugins
version:             0.1.0.0
synopsis:            A JIRA plugin for lambdabot
license:             BSD3
license-file:        LICENSE
author:              Richard Wallace
maintainer:          rwallace@thewallacepack.net
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lambdabot.Plugin.Jira

  build-depends:       base >=4.7 && <5
                     , aeson >=0.6.2.1
                     , array >= 0.4
                     , bytestring >= 0.10.0
                     , http-client >= 0.4.0
                     , http-client-tls >= 0.2.2
                     , http-types >= 0.8
                     , lambdabot-core >=5.0
                     , lifted-base >=0.2
                     , mtl >= 2.0
                     , regex-pcre >= 0.94
                     , split >=0.2.0
                     , text >=0.11
                     , transformers >= 0.3.0

  hs-source-dirs:      src

  default-language:    Haskell2010
